Update: initial login() funcion, login input animation.

--- a/static/login.html
+++ b/static/login.html
@@ -24,7 +24,7 @@
 					<input type="password" id="password_input">
 				</li>
 				<li>
-					<img id="submit_button" src="/images/right-arrow.svg">
+					<img id="submit_button" onclick="login()" src="/images/right-arrow.svg">
 				</li>
 			</ul>
 		</div>
