Update: Final Status page!

--- a/static/framework.html
+++ b/static/framework.html
@@ -12,6 +12,12 @@
 		<link rel="shortcut icon" href="images/favicon.png">
 		<script type="text/javascript" src="scripts/generic.js"></script>
 		<script type="text/javascript" src="scripts/framework.js"></script>
+		<script type="text/javascript" src="scripts/status.js"></script>
+		<script type="text/javascript" src="scripts/system.js"></script>
+		<script type="text/javascript" src="scripts/internet.js"></script>
+		<script type="text/javascript" src="scripts/wireless.js"></script>
+		<script type="text/javascript" src="scripts/intranet.js"></script>
+		<script type="text/javascript" src="scripts/advanced.js"></script>
 		<title>settings</title>
 	</head>
 	<body>
