--- a/static/status.html
+++ b/static/status.html
@@ -21,23 +21,23 @@
 			<table>
 				<tr>
 					<td class="property_name">Device name</td>
-					<td class="property_value" id="device_name">fhh-openwrt</td>
+					<td class="property_value" id="device_name">loading...</td>
 				</tr>
 				<tr>
 					<td class="property_name">Device model</td>
-					<td class="property_value" id="device_model">ECGM Router E1</td>
+					<td class="property_value" id="device_model">loading...</td>
 				</tr>
 				<tr>
 					<td class="property_name">Processor</td>
-					<td class="property_value" id="processor">East-China-Gold-Medal E9-9999X Processor</td>
+					<td class="property_value" id="processor">loading...</td>
 				</tr>
 				<tr>
 					<td class="property_name">Installed RAM</td>
-					<td class="property_value" id="installed_ram">9999TiB</td>
+					<td class="property_value" id="installed_ram">loading...</td>
 				</tr>
 				<tr>
 					<td class="property_name">Architecture</td>
-					<td class="property_value" id="architecture">ARMv8 Processor rev 4</td>
+					<td class="property_value" id="architecture">loading...</td>
 				</tr>
 			</table>
 		</div>
@@ -53,23 +53,23 @@
 			<table>
 				<tr>
 					<td class="property_name">System version</td>
-					<td class="property_value" id="firmware_version">OpenWrt 23.05.3 r23809-234f1a2efa / LuCI openwrt-23.05 branch git-24.086.45142-09d5a38</td>
+					<td class="property_value" id="firmware_version">loading...</td>
 				</tr>
 				<tr>
 					<td class="property_name">Target platform</td>
-					<td class="property_value" id="target_platform">mediatek/filogic</td>
+					<td class="property_value" id="target_platform">loading...</td>
 				</tr>
 				<tr>
 					<td class="property_name">Kernel version</td>
-					<td class="property_value" id="kernel_versopn">6.99.99</td>
+					<td class="property_value" id="kernel_version">loading...</td>
 				</tr>
 				<tr>
 					<td class="property_name">Power-on time</td>
-					<td class="property_value" id="power_on_time">699 Days</td>
+					<td class="property_value" id="power_on_time">loading...</td>
 				</tr>
 				<tr>
 					<td class="property_name">Average load</td>
-					<td class="property_value" id="average_load">0.00, 0.00, 0.00</td>
+					<td class="property_value" id="average_load">loading...</td>
 				</tr>
 			</table>
 		</div>
